--- a/진주떡집 연습/public_html/index.html
+++ b/진주떡집 연습/public_html/index.html
@@ -51,7 +51,7 @@
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">로그인</a>
+                    <a class="nav-link" href="login.html">로그인</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">회원가입</a>
@@ -370,7 +370,7 @@
     </div>
 
     <!-- CONTACT Section  -->
-    <div id="contact" class="container-fluid bg-light text-dark border-top wow fadeIn">
+    <div id="contact" class="container-fluid bg-light text-dark border-top wow fadeIn" style="margin-top: 50px;">
         <div class="row" style="padding:15px 20px 15px 20px">
             <div class="col-md-6 px-0">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4187.435170552942!2d129.10447309983948!3d35.139131077149955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ece455555555%3A0x51b13060777f1eba!2z7KeE7KO865ah7KeR!5e0!3m2!1sko!2skr!4v1666599267127!5m2!1sko!2skr" width=100% height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -416,7 +416,7 @@
         </div>
     </div>
     <div class="bg-light text-dark text-center border-top wow fadeIn">
-        <p class="mb-0 py-3 text-dark small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-dark"></i> By 진주떡집<br>all rights reserved.<br>hahaha</p>
+        <p class="mb-0 py-3 text-dark small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-dark"></i> By 진주떡집<br>all rights reserved.<br>hahaha<br>hahahaha</p>
     </div>
     <!-- end of page footer -->
 
