add js practice, jinjoo modify

--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with FoodHut landing page.">
     <meta name="author" content="Devcrud">
-    <title>진주떡집 시험 사이트</title>
+    <title>진주떡집 사이트</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -73,7 +73,7 @@
             <h2><br></h2>
             <h1 class="display-2 font-weight-bold my-3">진주떡집</h1>
             <h2 class="display-4 mb-5">남천동 최고의 떡집</h2>
-            <h3 style="position: absolute; right:10px; bottom:220px;">
+            <h3 style="position: absolute; right:10px; bottom:80px;">
                 <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
                     <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns아이콘png파일/인스타그램1.png" style="width:50px"></button>
                 </a>
@@ -86,24 +86,6 @@
             </h3>
         </div>
     </header>
-
-    <!--  About Section  -->
-    <div id="about" class="container-fluid bg-light text-black-50 wow fadeIn" id="about"data-wow-duration="1.5s">
-        <div class="row">
-            <div class="col-lg-6 has-img-bg"></div>
-            <div class="col-lg-6">
-                <div class="row justify-content-center">
-                    <div class="col-sm-8 py-5 my-5">
-                        <h2 class="mb-4">About Us</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
-                        nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
-                        <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi, reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!--  gallary Section  -->
     <div id="menu" class="text-center bg-light text-dark has-height-sm middle-items">
@@ -368,6 +350,26 @@
             </div>
         </div>
     </div>
+
+
+    <!--  About Section  -->
+    <div id="about" class="container-fluid bg-light text-black-50 wow fadeIn" id="about"data-wow-duration="1.5s">
+        <div class="row">
+            <div class="col-lg-6 has-img-bg"></div>
+            <div class="col-lg-6">
+                <div class="row justify-content-center">
+                    <div class="col-sm-8 py-5 my-5">
+                        <h2 class="mb-4">About Us</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
+                        nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
+                        <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi, reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- CONTACT Section  -->
     <div id="contact" class="container-fluid bg-light text-dark border-top wow fadeIn" style="margin-top: 50px;">
