--- a/jinjooRC_practice/public_html/firstmenu.html
+++ b/jinjooRC_practice/public_html/firstmenu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with FoodHut landing page.">
     <meta name="author" content="Devcrud">
-    <title>로그인</title>
+    <title>첫번째 메뉴</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -39,14 +39,6 @@
     <!-- LOGIN Section  -->
     <form>
         <div id="login" class="container-fluid wow fadeIn bg-light text-dark has-height-lg middle-items" style="margin-top: 100px; margin-bottom: 100px;">
-            <h2 class="my-5" style="text-align: center;">로그인</h2>
-            <p style="text-align: center;">아이디와 비밀번호를 입력해 주세요</p>
-            <div style="text-align: center;"> email : <input type="emal" /></div>
-            <div style="text-align: center;"> password : <input type="password" /></div>
-            <div style="text-align: center;">
-                <button type="submit" style="width: 200px;">회원가입하기</button>
-                <button style="width: 200px;">로그인하러가기</button>
-            </div>
         </div>
     </form>
 
@@ -75,6 +67,9 @@
                 </a>
                 <a href="https://band.us/band/77842984" target="_blank">
                     <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns아이콘png파일/네이버밴드.png" style="width:30px"></button>
+                </a>
+                <a href="http://pf.kakao.com/_zsKlb" target="_blank">
+                    <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns아이콘png파일/카카오채널.png" style="width:30px"></button>
                 </a>
             </h4>
         </div>
