--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -26,9 +26,6 @@
                     <a class="nav-link" href="#home">진주떡집 홈</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">우리떡집 소개</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#menu">메뉴</a>
                 </li>
                 <li class="nav-item">
@@ -38,23 +35,16 @@
                     <a class="nav-link" href="#event">이달의 이벤트<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">생생한 리뷰</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#contact">진주떡집 연락처</a>
                 </li>
             </ul>
-            <a class="navbar-brand m-auto" href="#home">
-                <span class="brand-txt">
-                    <br>
-                </span>
+            <a class="navbar-brand m-auto" href="#">
+                <img src="assets/imgs/freehome.png" class="brand-img" alt="">
+                <span class="brand-txt">진주떡집</span>
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="login.html">로그인</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">회원가입</a>
                 </li>
             </ul>
             <div class="search-box">
@@ -70,10 +60,7 @@
     <!-- header -->
     <header id="home" class="bg-light header">
         <div class="overlay text-light text-center">
-            <h2><br></h2>
-            <h1 class="display-2 font-weight-bold my-3">진주떡집</h1>
-            <h2 class="display-4 mb-5">남천동 최고의 떡집</h2>
-            <h3 style="position: absolute; right:10px; bottom:80px;">
+            <h3 style="position: absolute; right:10px; bottom:270px;">
                 <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
                     <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns아이콘png파일/인스타그램1.png" style="width:50px"></button>
                 </a>
@@ -82,6 +69,9 @@
                 </a>
                 <a href="https://band.us/band/77842984" target="_blank">
                     <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns아이콘png파일/네이버밴드.png" style="width:50px"></button>
+                </a>
+                <a href="http://pf.kakao.com/_zsKlb" target="_blank">
+                    <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns아이콘png파일/카카오채널.png" style="width:50px"></button>
                 </a>
             </h3>
         </div>
@@ -94,7 +84,7 @@
     <div class="gallary row bg-light">
         <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-1.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
+            <a href="firstmenu.html" class="gallary-overlay">
                 <h4 class="text-light text-center">상품 자세히 보고<br>담으러 가기!</h4>
                 <i class="gallary-icon"></i>
             </a>
@@ -110,7 +100,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-3.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -118,7 +108,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-4.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -126,7 +116,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-5.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -134,7 +124,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-6.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -142,7 +132,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-7.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -150,7 +140,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-8.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -158,7 +148,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-9.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -166,7 +156,7 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-10.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
@@ -174,8 +164,24 @@
             <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
             <h4 class="text-dark text-center">13,000원</h4>
         </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+        <div class="col-lg-6 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-11.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
+            <a href="#" class="gallary-overlay">
+                <i class="gallary-icon ti-plus"></i>
+            </a>
+            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
+            <h4 class="text-dark text-center">13,000원</h4>
+        </div>
+        <div class="col-lg-6 gallary-item wow fadeIn">
+            <img src="assets/imgs/gallary-12.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
+            <a href="#" class="gallary-overlay">
+                <i class="gallary-icon ti-plus"></i>
+            </a>
+            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
+            <h4 class="text-dark text-center">13,000원</h4>
+        </div>
+        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+            <img src="assets/imgs/gallary-12.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
             <a href="#" class="gallary-overlay">
                 <i class="gallary-icon ti-plus"></i>
             </a>
@@ -317,60 +323,6 @@
         </div>
     </div>
 
-    <!-- REVIEWS Section  -->
-    <div id="reviews" class="container-fluid wow fadeIn bg-light text-dark has-height-lg middle-items">
-        <h2 class="section-title my-5 text-center">생생한 리뷰~!</h2>
-        <div class="row mt-3 mb-5">
-            <div class="col-md-4 my-3 my-md-0">
-                <div class="testmonial-card">
-                    <h3 class="testmonial-title">John Doe</h3>
-                    <h6 class="testmonial-subtitle">Web Designer</h6>
-                    <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 my-3 my-md-0">
-                <div class="testmonial-card">
-                    <h3 class="testmonial-title">Steve Thomas</h3>
-                    <h6 class="testmonial-subtitle">UX/UI Designer</h6>
-                    <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 my-3 my-md-0">
-                <div class="testmonial-card">
-                    <h3 class="testmonial-title">Miranda Joy</h3>
-                    <h6 class="testmonial-subtitle">Graphic Designer</h6>
-                    <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!--  About Section  -->
-    <div id="about" class="container-fluid bg-light text-black-50 wow fadeIn" id="about"data-wow-duration="1.5s">
-        <div class="row">
-            <div class="col-lg-6 has-img-bg"></div>
-            <div class="col-lg-6">
-                <div class="row justify-content-center">
-                    <div class="col-sm-8 py-5 my-5">
-                        <h2 class="mb-4">About Us</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
-                        nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
-                        <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi, reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
     <!-- CONTACT Section  -->
     <div id="contact" class="container-fluid bg-light text-dark border-top wow fadeIn" style="margin-top: 50px;">
         <div class="row" style="padding:15px 20px 15px 20px">
@@ -404,17 +356,6 @@
                 <h3>FIND US</h3>
                 <P class="text-muted">부산광역시 수영구 남천1동 황령대로481번길 10-3</P>
             </div>
-            <h4 style="position: absolute; right:10px; margin-top: 150px;">
-                <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
-                    <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns아이콘png파일/인스타그램1.png" style="width:30px"></button>
-                </a>
-                <a href="https://www.facebook.com/profile.php?id=100063832380814" target="_blank">
-                    <button type="button" class="btn-sm bg-transparent border-0" id="facebook-btn"><img  src="assets/imgs/sns아이콘png파일/페이스북.png" style="width:30px"></button>
-                </a>
-                <a href="https://band.us/band/77842984" target="_blank">
-                    <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns아이콘png파일/네이버밴드.png" style="width:30px"></button>
-                </a>
-            </h4>
         </div>
     </div>
     <div class="bg-light text-dark text-center border-top wow fadeIn">
