--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -39,7 +39,7 @@
                 </li>
             </ul>
             <a class="navbar-brand m-auto" href="#">
-                <img src="assets/imgs/freehome.png" class="brand-img" alt="">
+                <img src="assets/imgs/logo2.png" class="brand-img" alt="">
                 <span class="brand-txt">진주떡집</span>
             </a>
             <ul class="navbar-nav">
@@ -60,7 +60,7 @@
 
     <!-- header -->
 
-    <div class="slide slide_wrap" style="margin-top: 100px;">
+    <div id="home" class="slide slide_wrap" style="margin-top: 100px;">
         <div class="slide_item item1"><img src="assets/imgs/gallary-3.jpg"></div>
         <div class="slide_item item2">2</div>
         <div class="slide_item item3"><a href="#" style="width: 100%;"><img src="assets/imgs/jinjoo.png" style="width: 100%;"></a></div>
@@ -87,7 +87,7 @@
                 <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns아이콘png파일/카카오채널.png" style="width:40px"></button>
             </a>
         </h3>
-        <h2 class="section-title py-5" style="margin-top: 50px;">진주떡집 메뉴</h2>
+        <h2 class="section-title py-5">진주떡집 메뉴</h2>
     </div>
     <div class="gallary row bg-light">
         <div class="col-lg-6 gallary-item wow fadeIn">
@@ -335,6 +335,20 @@
         </div>
     </div>
     <div class="bg-light text-dark text-center border-top wow fadeIn">
+        <h3 style="margin-top: 5px; margin-bottom: -50px; margin-left: 87%;">
+            <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
+                <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns아이콘png파일/인스타그램1.png" style="width:30px"></button>
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100063832380814" target="_blank">
+                <button type="button" class="btn-sm bg-transparent border-0" id="facebook-btn"><img  src="assets/imgs/sns아이콘png파일/페이스북.png" style="width:30px"></button>
+            </a>
+            <a href="https://band.us/band/77842984" target="_blank">
+                <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns아이콘png파일/네이버밴드.png" style="width:30px"></button>
+            </a>
+            <a href="http://pf.kakao.com/_zsKlb" target="_blank">
+                <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns아이콘png파일/카카오채널.png" style="width:30px"></button>
+            </a>
+        </h3>
         <p class="mb-0 py-3 text-dark small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-dark"></i> By 진주떡집<br>all rights reserved.<br>hahaha<br>hahahaha</p>
     </div>
     <!-- end of page footer -->
