--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -73,18 +73,18 @@
 
     <!--  gallary Section  -->
     <div id="menu" class="text-center bg-light text-dark has-height-sm middle-items">
-        <h3 style="position: absolute; right:10px; bottom: 21%;">
+        <h3 style="position: relative; left: 42.5%; margin-bottom: -20px;">
             <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns아이콘png파일/인스타그램1.png" style="width:40px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns/instagram.png" style="width:40px"></button>
             </a>
             <a href="https://www.facebook.com/profile.php?id=100063832380814" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="facebook-btn"><img  src="assets/imgs/sns아이콘png파일/페이스북.png" style="width:40px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="facebook-btn"><img  src="assets/imgs/sns/facebook.png" style="width:40px"></button>
             </a>
             <a href="https://band.us/band/77842984" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns아이콘png파일/네이버밴드.png" style="width:40px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns/naverband.png" style="width:40px"></button>
             </a>
             <a href="http://pf.kakao.com/_zsKlb" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns아이콘png파일/카카오채널.png" style="width:40px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns/kakaochannel.png" style="width:40px"></button>
             </a>
         </h3>
         <h2 class="section-title py-5">진주떡집 메뉴</h2>
@@ -335,18 +335,18 @@
         </div>
     </div>
     <div class="bg-light text-dark text-center border-top wow fadeIn">
-        <h3 style="margin-top: 5px; margin-bottom: -50px; margin-left: 87%;">
+        <h3 style="margin-bottom: -50px; margin-left: 87%;">
             <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns아이콘png파일/인스타그램1.png" style="width:30px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns/instagram.png" style="width:30px"></button>
             </a>
             <a href="https://www.facebook.com/profile.php?id=100063832380814" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="facebook-btn"><img  src="assets/imgs/sns아이콘png파일/페이스북.png" style="width:30px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="facebook-btn"><img  src="assets/imgs/sns/facebook.png" style="width:30px"></button>
             </a>
             <a href="https://band.us/band/77842984" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns아이콘png파일/네이버밴드.png" style="width:30px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns/naverband.png" style="width:30px"></button>
             </a>
             <a href="http://pf.kakao.com/_zsKlb" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns아이콘png파일/카카오채널.png" style="width:30px"></button>
+                <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns/kakaochannel.png" style="width:30px"></button>
             </a>
         </h3>
         <p class="mb-0 py-3 text-dark small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-dark"></i> By 진주떡집<br>all rights reserved.<br>hahaha<br>hahahaha</p>
