--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -73,7 +73,7 @@
 
     <!--  gallary Section  -->
     <div id="menu" class="text-center bg-light text-dark has-height-sm middle-items">
-        <h3 style="position: relative; left: 42.5%; margin-bottom: -20px;">
+        <h3 style="margin-left: 1460px; margin-bottom: -30px;">
             <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
                 <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns/instagram.png" style="width:40px"></button>
             </a>
