--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -61,9 +61,9 @@
     <!-- header -->
 
     <div id="home" class="slide slide_wrap" style="margin-top: 100px;">
-        <div class="slide_item item1"><img src="assets/imgs/gallary-3.jpg"></div>
+        <div class="slide_item item1">1</div>
         <div class="slide_item item2">2</div>
-        <div class="slide_item item3"><a href="#" style="width: 100%;"><img src="assets/imgs/jinjoo.png" style="width: 100%;"></a></div>
+        <div class="slide_item item3">3</div>
         <div class="slide_item item4">4</div>
         <div class="slide_item item5">5</div>
         <div class="slide_prev_button slide_button">◀</div>
