menu folder add

--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -61,7 +61,8 @@
     <!-- header -->
 
     <div id="home" class="slide slide_wrap" style="margin-top: 100px;">
-        <div class="slide_item item1">1</div>
+        <div class="slide_item item1"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a>
+        </div>
         <div class="slide_item item2">2</div>
         <div class="slide_item item3">3</div>
         <div class="slide_item item4">4</div>
