--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -63,10 +63,10 @@
     <div id="home" class="slide slide_wrap" style="margin-top: 100px;">
         <div class="slide_item item1"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a>
         </div>
-        <div class="slide_item item2">2</div>
-        <div class="slide_item item3">3</div>
-        <div class="slide_item item4">4</div>
-        <div class="slide_item item5">5</div>
+        <div class="slide_item item2"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
+        <div class="slide_item item3"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
+        <div class="slide_item item4"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
+        <div class="slide_item item5"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
         <div class="slide_prev_button slide_button">◀</div>
         <div class="slide_next_button slide_button">▶</div>
         <ul class="slide_pagination"></ul>
