first menu add, js, css

--- a/jinjooRC_practice/public_html/menu01.html
+++ b/jinjooRC_practice/public_html/menu01.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with FoodHut landing page.">
     <meta name="author" content="Devcrud">
-    <title>진주떡집 사이트</title>
+    <title>메뉴01</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -14,7 +14,7 @@
     <!-- Bootstrap + FoodHut main styles -->
 	<link rel="stylesheet" href="assets/css/foodhut.css">
 
-	<link rel="stylesheet" href="assets/css/slide.css">
+	<link rel="stylesheet" href="assets/css/menu01.css">
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home" style="background-color: #f8f9fa;">
@@ -23,29 +23,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home">진주떡집 홈</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#menu">메뉴</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#shopping">장바구니</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#event">이달의 이벤트<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">진주떡집 연락처</a>
+                    <a class="nav-link" href="index.html">진주떡집 홈</a>
                 </li>
             </ul>
-            <a class="navbar-brand m-auto" href="#">
+            <a class="navbar-brand m-auto" href="index.html">
                 <img src="assets/imgs/logo2.png" class="brand-img" alt="">
                 <span class="brand-txt">진주떡집</span>
             </a>
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">로그인</a>
-                </li>
             </ul>
             <div class="search-box">
                 <form action="." method="post">
@@ -57,158 +42,32 @@
             </div>
         </div>
     </nav>
-
-    <!-- header -->
-
-    <div id="home" class="slide slide_wrap" style="margin-top: 100px;">
-        <div class="slide_item item1"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
-        <div class="slide_item item2"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
-        <div class="slide_item item3"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
-        <div class="slide_item item4"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
-        <div class="slide_item item5"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
-        <div class="slide_prev_button slide_button">◀</div>
-        <div class="slide_next_button slide_button">▶</div>
-        <ul class="slide_pagination"></ul>
-    </div>
-
-    <!--  gallary Section  -->
-    <div id="menu" class="text-center bg-light text-dark has-height-sm middle-items">
-        <h3 style="margin-left: 85%">
-            <a href="https://www.instagram.com/busan_jinjoods_rice_cake/" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="insta-btn"><img  src="assets/imgs/sns/instagram.png" style="width:40px"></button>
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=100063832380814" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="facebook-btn"><img  src="assets/imgs/sns/facebook.png" style="width:40px"></button>
-            </a>
-            <a href="https://band.us/band/77842984" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="naverband-btn"><img  src="assets/imgs/sns/naverband.png" style="width:40px"></button>
-            </a>
-            <a href="http://pf.kakao.com/_zsKlb" target="_blank">
-                <button type="button" class="btn-sm bg-transparent border-0" id="kakaochannel-btn"><img  src="assets/imgs/sns/kakaochannel.png" style="width:40px"></button>
-            </a>
-        </h3>
-        <h2 class="section-title py-5">진주떡집 메뉴</h2>
-    </div>
-    <div class="gallary row bg-light">
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/jinjooabout.jpeg" class="gallary-img">
-            <a href="menu01.html" class="gallary-overlay">
-                <h4 class="text-light text-center">상품 자세히 보고<br>담으러 가기!</h4>
-                <i class="gallary-icon"></i>
-            </a>
-            <h3 class="text-center text-dark">마약 꿀백설기</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-2.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <h4 class="text-light text-center">13,000원</h4>
-                <i class="gallary-icon"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-3.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-4.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-5.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-6.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-7.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-8.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-9.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-10.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-11.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-        <div class="col-lg-6 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-12.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-            <h3 class="text-center text-dark">우리떡집 대표메뉴</h3>
-            <h4 class="text-dark text-center">13,000원</h4>
-        </div>
-    </div>
-
-    <!-- book a table Section  -->
-    <div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="shopping">
-        <div class="">
-            <h2 class="section-title mb-5">장바구니</h2>
-            <div class="row mb-5">
-                <div class="col-sm-6 col-md-3 col-xs-12 my-2">
-                    <input type="email" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="EMAIL">
-                </div>
-                <div class="col-sm-6 col-md-3 col-xs-12 my-2">
-                    <input type="number" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="NUMBER OF GUESTS" max="20" min="0">
-                </div>
-                <div class="col-sm-6 col-md-3 col-xs-12 my-2">
-                    <input type="time" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="EMAIL">
-                </div>
-                <div class="col-sm-6 col-md-3 col-xs-12 my-2">
-                    <input type="date" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="12/12/12">
+    <!--  About Section  -->
+    <div id="about" class="container-fluid wow fadeIn border-bottom border-top text-dark" id="about"data-wow-duration="1.5s" style="margin-top: 100px;">
+        <div class="row">
+            <div class="col-lg-6">
+                <div id="home" class="slide slide_wrap" style="margin-top: 50px;">
+                    <div class="slide_item item1"></div>
+                    <div class="slide_item item2"></div>
+                    <div class="slide_item item2"></div>
+                    <div class="slide_item item2"></div>
+                    <div class="slide_item item2"></div>
+                    <div class="slide_prev_button slide_button">◀</div>
+                    <div class="slide_next_button slide_button">▶</div>
+                    <ul class="slide_pagination"></ul>
+                </div>            
+            </div>
+            <div class="col-lg-6">
+                <div class="row justify-content-center">
+                    <div class="col-sm-8 py-5 my-5">
+                        <h2 class="mb-4">마약 꿀백설기</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
+                        nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
+                        <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi, reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
+                    </div>
                 </div>
             </div>
-            <a href="#" class="btn btn-lg btn-dark" id="rounded-btn">전체 구매하기</a>
         </div>
     </div>
 
@@ -306,7 +165,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4187.435170552942!2d129.10447309983948!3d35.139131077149955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ece455555555%3A0x51b13060777f1eba!2z7KeE7KO865ah7KeR!5e0!3m2!1sko!2skr!4v1666599267127!5m2!1sko!2skr" width=100% height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
-                <h3>찾아오시는 길</h3>
+                <h3>FIND US</h3>
                 <p>부산시 수영구 남천동 해변시장 근처 어딘가에 있다 그곳이 진주떡집 존맛탱탱구리 예전 마리이야기가 있던 옆에 그골목 그곳으로 들어오면 있다. 맛있는 떡을 찾으러 오라 다들 오라 다와 언능와 빨리와!</p>
                 <div class="text-dark">
                     <p><span class="ti-location-pin pr-3"></span> 부산광역시 수영구 남천1동 황령대로481번길 10-3</p>
@@ -365,7 +224,7 @@
     
     <!-- FoodHut js -->
     <script src="assets/js/foodhut.js"></script>
-    <script src="assets/js/slide.js"></script>
+    <script src="assets/js/menuslide.js"></script>
 
 </body>
 </html>
