--- a/jinjooRC_practice/public_html/index.html
+++ b/jinjooRC_practice/public_html/index.html
@@ -60,8 +60,8 @@
 
     <!-- header -->
 
-    <div id="home" class="slide slide_wrap" style="margin-top: 100px;">
-        <div class="slide_item item1"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
+    <div id="header" class="slide slide_wrap" style="margin-top: 100px;">
+        <div class="slide_item item1"><a href="#" class="btn btn-lg btn-toolbar" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기 >></a></div>
         <div class="slide_item item2"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
         <div class="slide_item item3"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
         <div class="slide_item item4"><a href="#" class="btn btn-lg btn-light" id="rounded-btn" style="margin-left: 83%; margin-top: 28%">자세히 보러 가기</a></div>
