--- a/jinjooRC_practice/public_html/menu01.html
+++ b/jinjooRC_practice/public_html/menu01.html
@@ -43,10 +43,10 @@
         </div>
     </nav>
     <!--  About Section  -->
-    <div id="about" class="container-fluid wow fadeIn border-bottom border-top text-dark" id="about"data-wow-duration="1.5s" style="margin-top: 100px;">
-        <div class="row">
+    <div id="about_item" class="container-fluid wow fadeIn border-top border-bottom text-dark" id="about"data-wow-duration="1.5s" style="margin-top: 100px; width: 80%">
+        <div class="row justify-content-end">
             <div class="col-lg-6">
-                <div id="home" class="slide slide_wrap" style="margin-top: 50px;">
+                <div id="slide_img" class="slide slide_wrap" style="margin-top: 13%">
                     <div class="slide_item item1"></div>
                     <div class="slide_item item2"></div>
                     <div class="slide_item item3"></div>
@@ -61,10 +61,10 @@
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5">
                         <h2 class="mb-4">마약 꿀백설기</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
+                        <h3 class="mb-4 border-bottom">3000원</h3>
+                        <p class="border-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
                         nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
                         <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi, reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
                     </div>
                 </div>
             </div>
