--- a/jinjooRC_practice/public_html/menu01.html
+++ b/jinjooRC_practice/public_html/menu01.html
@@ -61,9 +61,16 @@
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5">
                         <h2 class="mb-4">마약 꿀백설기</h2>
-                        <h3 class="mb-4 border-bottom">3000원</h3>
-                        <p class="border-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
-                        nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
+                        <h3 class="mb-4 border-bottom">가격 : 3000원<br></h3>
+                        <p><span class="pr-2">lalalal</span>blablabla</p>
+                        <p><span class="pr-3">lalalal</span>blablabla</p>
+                        <p><span class="pr-4">lalalal</span>blablabla</p>
+                        <p class="border-bottom"><span class="pr-5">lalalal</span>blablabla<br><br></p>
+                        <p><span class="pr-5">lalalal</span>blablabla</p>
+                        <button>aaa</button><button>aaa</button><button>aaa</button><br>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
+                        nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi 
+                        pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
                         <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
                     </div>
                 </div>
